xmptag: fix compiler warning in release mode

Fix compiler warning caused by g_assert_not_reached() being skipped
because releases are compiled with -DG_DISABLE_ASSERT.

https://bugzilla.gnome.org/show_bug.cgi?id=656264